Create tripulant type. Vehicle type implementation

--- a/SPA/viajantes2-spa/src/app/overall-components/side-nav/side-nav.component.html
+++ b/SPA/viajantes2-spa/src/app/overall-components/side-nav/side-nav.component.html
@@ -8,6 +8,7 @@
       <a mat-list-item  routerLink="/nodes">Nodes</a>
       <a mat-list-item  routerLink="/lines">Lines</a>
       <a mat-list-item  routerLink="/tripulant-types">Tripulant Type</a>
+      <a mat-list-item  routerLink="/vehicle-types">Vehicle Type</a>
     </mat-nav-list>    
   </mat-sidenav>
   <mat-sidenav-content>
