--- a/SPA/viajantes2-spa/src/app/RedeMasterData/components/tripulant-type/tripulant-type.component.html
+++ b/SPA/viajantes2-spa/src/app/RedeMasterData/components/tripulant-type/tripulant-type.component.html
@@ -1,5 +1,11 @@
 <h1>&nbsp; Tripulant Types</h1>
-  <mat-form-field>
+  
+<div>
+  <a mat-button (click)= "setAdd()" >{{isAdding ? 'Close create mode' : 'Create Tripulant Type'}}</a>
+</div>
+
+<div *ngIf="!isAdding; else createTripulantTypeTemplate">
+<mat-form-field>
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Aguiar de Sousa" #input>
   </mat-form-field>
@@ -17,3 +23,22 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row  *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+</div>
+
+<ng-template #createTripulantTypeTemplate>
+  
+  <div [formGroup]="tripulantTypeForm">
+    <section class="example-section">
+      <mat-form-field class="example-full-width">
+        <mat-label>Description</mat-label>
+        <input matInput class="form-control" formControlName="description">
+        <mat-error *ngIf="formControl.hasError('required')">
+          Description is <strong>required</strong>
+        </mat-error>
+      </mat-form-field>
+    </section>
+    </div>
+    <div>
+      <a mat-button (click)= "submit()">Submit</a>
+    </div>
+</ng-template>
