Import glx, started implementation. Some side nav improvs. Some node improvs. Error handling started for nodes. Misses erro handling for each error (only displays warning for one)

--- a/SPA/viajantes2-spa/src/app/RedeMasterData/components/nodes/nodes.component.css
+++ b/SPA/viajantes2-spa/src/app/RedeMasterData/components/nodes/nodes.component.css
@@ -12,6 +12,9 @@ mat-icon {
   font-size: 14px;
   width: 100%;
 }
+mat-label {
+  color: blueviolet;
+}
 /* mat-button {
   color: blueviolet;
 } */
