--- a/SPA/viajantes2-spa/src/app/RedeMasterData/components/nodes/nodes.component.html
+++ b/SPA/viajantes2-spa/src/app/RedeMasterData/components/nodes/nodes.component.html
@@ -6,21 +6,20 @@
 <div>
   <a mat-button (click)= "setAdd()" >{{isAdding ? 'Close create mode' : 'Create Node'}}</a>
 </div>
-
 <div *ngIf="!isAdding; else createNodeTemplate">
-  <mat-form-field>
-    <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Aguiar de Sousa" #input>
+  <mat-form-field  class="example-full-width">
+    <mat-label>Name: </mat-label>
+    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Ex. Aguiar de Sousa" #input>
   </mat-form-field>
-<table mat-table [dataSource]="dataSource"  class="mat-elevation-z8">
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
   
     <ng-container matColumnDef="shortName">
-      <th mat-header-cell *matHeaderCellDef > Short Name </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Short Name </th>
       <td mat-cell *matCellDef="let nodes"> {{nodes.shortName}} </td>
     </ng-container>
   
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef > Name </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
       <td mat-cell *matCellDef="let nodes" (click)="onShowDetails(row)"> {{nodes.name}} </td>
     </ng-container>
     
