Some implementations regarding routes, somes mappers already implemented.

--- a/viajantes2-spa/src/app/overall-components/side-nav/side-nav.component.html
+++ b/viajantes2-spa/src/app/overall-components/side-nav/side-nav.component.html
@@ -6,7 +6,7 @@
     <mat-toolbar><mat-icon aria-hidden="false" aria-label="Example home icon">directions_bus</mat-icon>&nbsp; &nbsp;Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item (click)="goToNodes()"><mat-icon aria-hidden="false" aria-label="Example home icon">pin_drop</mat-icon>&nbsp; &nbsp;Nodes</a>
-      <a mat-list-item (click)="goToNodes()"><mat-icon aria-hidden="false" aria-label="Example home icon">alt_route</mat-icon>&nbsp; &nbsp;Routes</a>
+      <a mat-list-item (click)="goToRoutes()"><mat-icon aria-hidden="false" aria-label="Example home icon">alt_route</mat-icon>&nbsp; &nbsp;Routes</a>
       <a mat-list-item (click)="goToLines()"><mat-icon aria-hidden="false" aria-label="Example home icon">add_road</mat-icon>&nbsp; &nbsp;Lines</a>
       <a mat-list-item (click)="goToTType()"><mat-icon aria-hidden="false" aria-label="Example home icon">emoji_people</mat-icon>&nbsp; &nbsp;Tripulant Type</a>
       <a mat-list-item (click)="goToVType()"><mat-icon aria-hidden="false" aria-label="Example home icon">directions_bus</mat-icon>&nbsp; &nbsp;Vehicle Type</a>
