Implementation of listing lines. Still misses filters and handling, as well as mappers.

--- a/viajantes2-spa/src/app/RedeMasterData/components/vehicle-type/vehicle-type.component.html
+++ b/viajantes2-spa/src/app/RedeMasterData/components/vehicle-type/vehicle-type.component.html
@@ -105,7 +105,7 @@
       </mat-error>
     </mat-form-field>&nbsp; &nbsp; &nbsp; &nbsp;    
   <mat-form-field class="example-full-width">
-    <mat-label>Favorite Brands</mat-label>
+    <mat-label>Fuel Type</mat-label>
     <mat-select class="form-control" formControlName="fuel">
       <mat-option *ngFor="let fuel of fuels" [value]="fuel.value">
         {{ fuel.viewValue }}
