--- a/viajantes2-spa/src/app/RedeMasterData/components/line/line.component.html
+++ b/viajantes2-spa/src/app/RedeMasterData/components/line/line.component.html
@@ -1,1 +1,36 @@
-<p>line works!</p>
+<h1>&nbsp; Lines</h1>
+<mat-form-field  class="example-full-width">
+    <mat-label>Name: </mat-label>
+    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Ex. Aguiar de Sousa" #input>
+  </mat-form-field>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+  
+    <ng-container matColumnDef="code">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Code </th>
+      <td mat-cell *matCellDef="let lines"> {{lines.code}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+      <td mat-cell *matCellDef="let lines" > {{lines.name}} </td>
+    </ng-container>
+    
+    <ng-container matColumnDef="color">
+      <th mat-header-cell *matHeaderCellDef > color </th>
+      <td mat-cell *matCellDef="let lines"> {{lines.color}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="beginNode">
+        <th mat-header-cell *matHeaderCellDef> Begin Node </th>
+        <td mat-cell *matCellDef="let lines"> {{lines.beginNode.shortName}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="finalNode">
+        <th mat-header-cell *matHeaderCellDef> Final Node </th>
+        <td mat-cell *matCellDef="let lines"> {{lines.finalNode.shortName}} </td>
+      </ng-container>
+
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row  *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
