Some minor changes

--- a/viajantes2-spa/src/app/RedeMasterData/components/nodes/nodes.component.css
+++ b/viajantes2-spa/src/app/RedeMasterData/components/nodes/nodes.component.css
@@ -1,7 +1,15 @@
 table {
   width: 100%;
 }
-
+/* th.mat-header-cell, mat-cell {
+  text-align: center !important;
+} */
+mat-header-cell {
+  display:flex;
+  justify-content:center; }
+mat-cell {
+  display:flex;
+  justify-content:center;}
 th.mat-sort-header-sorted {
   color: black;
 }
