--- a/viajantes2-spa/src/app/RedeMasterData/components/line/line.component.html
+++ b/viajantes2-spa/src/app/RedeMasterData/components/line/line.component.html
@@ -30,6 +30,12 @@
         <td mat-cell *matCellDef="let lines"> {{lines.finalNode.shortName}} </td>
       </ng-container>
 
+      <ng-container matColumnDef="actions">
+        <mat-header-cell  *matHeaderCellDef ></mat-header-cell>
+        <mat-cell *matCellDef="let row" >
+             <button mat-button (click)= "onShowDetails(row)" ><mat-icon color='blueviolet'>visibility</mat-icon></button><button mat-button ><mat-icon color='blueviolet'>remove_circle</mat-icon></button>
+        </mat-cell>
+      </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row  *matRowDef="let row; columns: displayedColumns;"></tr>
