--- a/viajantes2-spa/src/app/RedeMasterData/components/nodes/nodes.component.html
+++ b/viajantes2-spa/src/app/RedeMasterData/components/nodes/nodes.component.html
@@ -36,13 +36,16 @@
 
       <ng-container matColumnDef="collectionNode">
         <th mat-header-cell *matHeaderCellDef> Collection Node </th>
-        <td mat-cell *matCellDef="let nodes"> {{!!nodes.collectionNode ? 'x' : ''}} </td>
+        <td mat-cell *matCellDef="let nodes"> 
+          <i *ngIf="nodes.collectionNode == true"> 
+         <mat-icon color='blueviolet'>done</mat-icon></i></td>
       </ng-container>
   
     <!-- Symbol Column -->
     <ng-container matColumnDef="surrenderNode">
       <th mat-header-cell *matHeaderCellDef> Surrender Node </th>
-      <td mat-cell *matCellDef="let nodes"> {{!!nodes.surrenderNode ? 'x' : ''}}</td>
+      <td mat-cell *matCellDef="let nodes"> <i *ngIf="nodes.surrenderNode == true"> 
+        <mat-icon color='blueviolet'>done</mat-icon></i></td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
