--- a/viajantes2-spa/src/app/RedeMasterData/components/line/line.component.html
+++ b/viajantes2-spa/src/app/RedeMasterData/components/line/line.component.html
@@ -1,89 +1,101 @@
 <h1>&nbsp; Lines</h1>
 
-<div>
-  <a mat-button (click)= "setAdd()" >{{isAdding ? 'Close create line' : 'Create Line'}}</a>
-</div>
+<div *ngIf="!isViewingRoutes; else viewLineRoutesTemplate">
 
-<div *ngIf="!isAdding; else createLineTemplate">
-
-  <mat-form-field  class="example-full-width">
-    <mat-label>Name: </mat-label>
-    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Ex. Aguiar de Sousa" #input>
-  </mat-form-field>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
-  
-    <ng-container matColumnDef="code">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Code </th>
-      <td mat-cell *matCellDef="let lines"> {{lines.code}} </td>
-    </ng-container>
-  
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-      <td mat-cell *matCellDef="let lines" > {{lines.name}} </td>
-    </ng-container>
-    
-    <ng-container matColumnDef="color">
-      <th mat-header-cell *matHeaderCellDef > Color </th>
-      <td mat-cell *matCellDef="let lines"> {{lines.color}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="beginNode">
-        <th mat-header-cell *matHeaderCellDef> Begin Node </th>
-        <td mat-cell *matCellDef="let lines"> {{lines.beginNode.shortName}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="finalNode">
-        <th mat-header-cell *matHeaderCellDef> Final Node </th>
-        <td mat-cell *matCellDef="let lines"> {{lines.finalNode.shortName}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="actions">
-        <mat-header-cell  *matHeaderCellDef ></mat-header-cell>
-        <mat-cell *matCellDef="let row" >
-             <button mat-button (click)= "onShowDetails(row)" ><mat-icon color='blueviolet'>visibility</mat-icon></button><button mat-button ><mat-icon color='blueviolet'>remove_circle</mat-icon></button>
-        </mat-cell>
-      </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row  *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-
-</div>
-
-<ng-template #createLineTemplate>
-  
-  <div [formGroup]="lineForm">
-
-    <section class="example-section">
-
-      <mat-form-field class="example-full-width">
-        <mat-label>Code</mat-label>
-        <input matInput class="form-control" formControlName="code">
-        <mat-error *ngIf="formControl.hasError('required')">
-          Code is <strong>required</strong>
-        </mat-error>
-      </mat-form-field>&nbsp; &nbsp; &nbsp; &nbsp;
-
-      <mat-form-field class="example-full-width">
-        <mat-label>Name</mat-label>
-        <input matInput class="form-control" formControlName="name">
-        <mat-error *ngIf="formControl.hasError('required')">
-          Line Name is <strong>required</strong>
-        </mat-error>
-      </mat-form-field>&nbsp; &nbsp; &nbsp; &nbsp; 
-
-      <mat-form-field class="example-full-width">
-        <mat-label>Color</mat-label>
-        <input matInput class="form-control" formControlName="color">
-        <mat-error *ngIf="formControl.hasError('required')">
-          Line Color is <strong>required</strong>
-        </mat-error>
-      </mat-form-field>
-
-    </section>
-
-  </div>
   <div>
-    <a mat-button (click)= "submit()">Submit</a>
+    <a mat-button (click)= "setAdd()" >{{isAdding ? 'Close create line' : 'Create Line'}}</a>
   </div>
+
+  <div *ngIf="!isAdding; else createLineTemplate">
+
+    <mat-form-field  class="example-full-width">
+      <mat-label>Name: </mat-label>
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Ex. Aguiar de Sousa" #input>
+    </mat-form-field>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+    
+      <ng-container matColumnDef="code">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Code </th>
+        <td mat-cell *matCellDef="let lines"> {{lines.code}} </td>
+      </ng-container>
+    
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <td mat-cell *matCellDef="let lines" > {{lines.name}} </td>
+      </ng-container>
+      
+      <ng-container matColumnDef="color">
+        <th mat-header-cell *matHeaderCellDef > Color </th>
+        <td mat-cell *matCellDef="let lines"> {{lines.color}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="beginNode">
+          <th mat-header-cell *matHeaderCellDef> Begin Node </th>
+          <td mat-cell *matCellDef="let lines"> {{lines.beginNode.shortName}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="finalNode">
+          <th mat-header-cell *matHeaderCellDef> Final Node </th>
+          <td mat-cell *matCellDef="let lines"> {{lines.finalNode.shortName}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="actions">
+          <mat-header-cell  *matHeaderCellDef ></mat-header-cell>
+          <mat-cell *matCellDef="let row" >
+              <button mat-button (click)= "onShowDetails(row)" ><mat-icon color='blueviolet'>visibility</mat-icon></button><button mat-button ><mat-icon color='blueviolet'>remove_circle</mat-icon></button>
+          </mat-cell>
+        </ng-container>
+    
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row  *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+  </div>
+
+  <ng-template #createLineTemplate>
+    
+    <div [formGroup]="lineForm">
+
+      <section class="example-section">
+
+        <mat-form-field class="example-full-width">
+          <mat-label>Code</mat-label>
+          <input matInput class="form-control" formControlName="code">
+          <mat-error *ngIf="formControl.hasError('required')">
+            Code is <strong>required</strong>
+          </mat-error>
+        </mat-form-field>&nbsp; &nbsp; &nbsp; &nbsp;
+
+        <mat-form-field class="example-full-width">
+          <mat-label>Name</mat-label>
+          <input matInput class="form-control" formControlName="name">
+          <mat-error *ngIf="formControl.hasError('required')">
+            Line Name is <strong>required</strong>
+          </mat-error>
+        </mat-form-field>&nbsp; &nbsp; &nbsp; &nbsp; 
+
+        <mat-form-field class="example-full-width">
+          <mat-label>Color</mat-label>
+          <input matInput class="form-control" formControlName="color">
+          <mat-error *ngIf="formControl.hasError('required')">
+            Line Color is <strong>required</strong>
+          </mat-error>
+        </mat-form-field>
+
+      </section>
+
+    </div>
+    <div>
+      <a mat-button (click)= "submit()">Submit</a>
+    </div>
+  </ng-template>
+
+</div>
+
+<ng-template #viewLineRoutesTemplate>
+
+  <div>
+    <a mat-button (click)= "setViewLineRoutes()" >Close View</a>
+  </div>
+
 </ng-template>
