--- a/viajantes2-spa/src/app/RedeMasterData/components/routes/routes.component.html
+++ b/viajantes2-spa/src/app/RedeMasterData/components/routes/routes.component.html
@@ -1,1 +1,110 @@
-<p>routes works!</p>
+<!-- <mat-nav-list>
+    <mat-list-item *ngFor="let fruit of fruits">fruit</mat-list-item>
+</mat-nav-list> -->
+<h1>&nbsp; Routes </h1>
+
+    <div>
+    <a mat-button (click)= "setAdd()" >{{isAdding ? 'Close create mode' : 'Create Node'}}</a>
+  </div>
+  <div *ngIf="!isAdding; else createRouteTemplate">
+  <mat-form-field  class="example-full-width">
+    <mat-label>Name: </mat-label>
+    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Ex. Aguiar de Sousa" #input>
+  </mat-form-field>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+  
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+      <td mat-cell *matCellDef="let routes"> {{routes.routeNodes[0].node.shortName}} - {{routes.routeNodes[routes.routeNodes.length-1].node.shortName}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="distance">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Distance </th>
+      <td mat-cell *matCellDef="let routes" (click)="onShowDetails(row)"> {{routes.distance}} {{i}}</td>
+    </ng-container>
+    
+    <!-- Weight Column -->
+    <ng-container matColumnDef="duration">
+      <th mat-header-cell *matHeaderCellDef > Duration </th>
+      <td mat-cell *matCellDef="let routes"> {{routes.duration}} </td>
+    </ng-container>
+
+      <ng-container matColumnDef="isReinforcementRoute">
+        <th mat-header-cell *matHeaderCellDef> Is Reinforcement Route</th>
+        <td mat-cell *matCellDef="let routes"> 
+          <i *ngIf="routes.isReinforcementRoute == true"> 
+         <mat-icon color='blueviolet'>done</mat-icon></i></td>
+      </ng-container>
+  
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="isEmptyRoute">
+      <th mat-header-cell *matHeaderCellDef> Is Empty Route </th>
+      <td mat-cell *matCellDef="let routes"> <i *ngIf="routes.isEmptyRoute == true"> 
+        <mat-icon color='blueviolet'>done</mat-icon></i></td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+        <mat-header-cell  *matHeaderCellDef ></mat-header-cell>
+        <mat-cell *matCellDef="let row" >
+             <button mat-button (click)= "onShowDetails(row)" ><mat-icon color='blueviolet'>create</mat-icon></button><button mat-button ><mat-icon color='blueviolet'>remove_circle</mat-icon></button>
+        </mat-cell>
+      </ng-container>
+
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row  *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
+
+  <ng-template #createRouteTemplate>
+  
+    <div [formGroup]="routeForm">
+      <button mat-button (click)= "insertNode()" ><mat-icon color='blueviolet'>create</mat-icon></button>
+      <section class="example-section">
+        <mat-slide-toggle
+        class="form-control" formControlName="isReinforcementRoute"
+            [color]="primary"
+            [checked]="checked"
+            [disabled]="disabled">
+          Reinforcement Route
+      </mat-slide-toggle>&nbsp; &nbsp; &nbsp; &nbsp;
+        <mat-slide-toggle
+        class="form-control" formControlName="isEmptyRoute"         
+            [color]="primary"
+            [checked]="checked"
+            [disabled]="disabled">
+          Empty Route
+        </mat-slide-toggle>
+      </section>
+      <div *ngFor="let add of addNode; index as i">
+        <mat-label> <br><br>{{i > 0 ? 'Node: ' + i : 'Begin Node'}}<br><br></mat-label>
+        <mat-form-field class="example-full-width">
+          <mat-label>Node</mat-label>
+          <mat-select class="form-control" formControlName="node">
+            <mat-option *ngFor="let node of nodeList" [value]="node.id">
+              {{ node.shortName }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+          <div *ngIf="addNode?.length > 1">
+          <mat-form-field *ngIf="i > 0"class="example-full-width">
+            <mat-label>Duration</mat-label>
+            <input matInput class="form-control" formControlName="durationNode">
+            <mat-error *ngIf="formControl.hasError('required')">
+              Distance is <strong>required</strong>
+            </mat-error>
+          </mat-form-field>&nbsp; &nbsp; &nbsp; &nbsp;    
+          <mat-form-field *ngIf="i > 0" class="example-full-width">
+            <mat-label>Distance</mat-label>
+            <input matInput class="form-control" formControlName="distanceNode">
+            <mat-error *ngIf="formControl.hasError('required')">
+              Distance is <strong>required</strong>
+            </mat-error>
+          </mat-form-field>
+        </div>
+        
+      </div>  
+    </div>
+      <div>
+        <a mat-button (click)= "submit()">Submit</a>
+      </div>
