Create routes implementation (misses validation, stand by backend fix)

--- a/viajantes2-spa/src/app/RedeMasterData/components/routes/routes.component.html
+++ b/viajantes2-spa/src/app/RedeMasterData/components/routes/routes.component.html
@@ -59,7 +59,7 @@
   <ng-template #createRouteTemplate>
   
     <div [formGroup]="routeForm">
-      <button mat-button (click)= "insertNode()" ><mat-icon color='blueviolet'>create</mat-icon></button>
+      <button mat-button (click)= "insertNode()" ><mat-icon color='blueviolet'>add_box</mat-icon></button>
       <section class="example-section">
         <mat-slide-toggle
         class="form-control" formControlName="isReinforcementRoute"
@@ -76,17 +76,33 @@
           Empty Route
         </mat-slide-toggle>
       </section>
-      <div *ngFor="let add of addNode; index as i">
+    </div>
+      <div *ngFor="let control of routeNodes.controls; index as i">
         <mat-label> <br><br>{{i > 0 ? 'Node: ' + i : 'Begin Node'}}<br><br></mat-label>
         <mat-form-field class="example-full-width">
           <mat-label>Node</mat-label>
-          <mat-select class="form-control" formControlName="node">
+          <mat-select class="form-control" [formControl]="routeNodes.controls[i]">
             <mat-option *ngFor="let node of nodeList" [value]="node.id">
               {{ node.shortName }}
             </mat-option>
           </mat-select>
-        </mat-form-field>
-          <div *ngIf="addNode?.length > 1">
+        </mat-form-field><br>
+          <mat-form-field *ngIf="i > 0"class="example-full-width">
+            <mat-label>Duration</mat-label>
+            <input matInput class="form-control" [formControl]="routeNodesDuration.controls[i]">
+            <mat-error *ngIf="formControl.hasError('required')">
+              Duration is <strong>required</strong>
+            </mat-error>
+          </mat-form-field>&nbsp; &nbsp; &nbsp; &nbsp;
+            <mat-form-field *ngIf="i > 0"class="example-full-width">
+              <mat-label>Distance</mat-label>
+              <input matInput class="form-control" [formControl]="routeNodesDistance.controls[i]">
+              <mat-error *ngIf="formControl.hasError('required')">
+                Distance is <strong>required</strong>
+              </mat-error>
+            </mat-form-field>&nbsp; &nbsp; &nbsp; &nbsp;
+            
+          <!-- <div *ngIf="addNode?.length > 1">
           <mat-form-field *ngIf="i > 0"class="example-full-width">
             <mat-label>Duration</mat-label>
             <input matInput class="form-control" formControlName="durationNode">
@@ -101,10 +117,8 @@
               Distance is <strong>required</strong>
             </mat-error>
           </mat-form-field>
-        </div>
-        
+        </div>         -->
       </div>  
-    </div>
       <div>
         <a mat-button (click)= "submit()">Submit</a>
       </div>
