Tripulant Type Validations

--- a/viajantes2-spa/src/app/RedeMasterData/components/tripulant-type/tripulant-type.component.html
+++ b/viajantes2-spa/src/app/RedeMasterData/components/tripulant-type/tripulant-type.component.html
@@ -41,4 +41,14 @@
     <div>
       <a mat-button (click)= "submit()">Submit</a>
     </div>
+    <div *ngIf="hasError">
+
+    <ul>
+      <div *ngFor="let errorMessage of errorMessages">
+        <mat-error-label>{{errorMessage}}</mat-error-label>
+      </div>
+    </ul>
+
+  </div>
+    
 </ng-template>
