--- a/viajantes2-spa/src/app/RedeMasterData/components/tripulant-type/tripulant-type.component.css
+++ b/viajantes2-spa/src/app/RedeMasterData/components/tripulant-type/tripulant-type.component.css
@@ -37,6 +37,11 @@ table {
   .example-margin {
     color: blueviolet;
   }
+
+  mat-error-label {
+    color: red;
+  }
+
   /* .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
     background-color: blueviolet;
   }
