--- a/viajantes2-spa/src/app/RedeMasterData/components/vehicle-type/vehicle-type.component.html
+++ b/viajantes2-spa/src/app/RedeMasterData/components/vehicle-type/vehicle-type.component.html
@@ -61,64 +61,70 @@
 
 <ng-template #createVehicleTypeTemplate>  
   <div [formGroup]="vehicleTypeForm">
-  <section class="example-section">
+    <section class="example-section">
+        <mat-form-field class="example-full-width">
+          <mat-label>Description</mat-label>
+          <input matInput class="form-control" formControlName="description">
+          <mat-error *ngIf="formControl.hasError('required')">
+            Description is <strong>required</strong>
+          </mat-error>
+        </mat-form-field>&nbsp; &nbsp; &nbsp; &nbsp;    
+        <mat-form-field class="example-full-width">
+          <mat-label>Autonomy</mat-label>
+          <input matInput class="form-control" formControlName="autonomy">
+          <mat-error *ngIf="formControl.hasError('required')">
+            Autonomy is <strong>required</strong>
+          </mat-error>
+        </mat-form-field>   
+    </section>
+
+    <section class="example-section">
       <mat-form-field class="example-full-width">
-        <mat-label>Description</mat-label>
-        <input matInput class="form-control" formControlName="description">
+        <mat-label>Cost Per Kilometer</mat-label>
+        <input matInput class="form-control" formControlName="costPerKilometer">
         <mat-error *ngIf="formControl.hasError('required')">
-          Description is <strong>required</strong>
+          costPerKilometer is <strong>required</strong>
         </mat-error>
       </mat-form-field>&nbsp; &nbsp; &nbsp; &nbsp;    
       <mat-form-field class="example-full-width">
-        <mat-label>Autonomy</mat-label>
-        <input matInput class="form-control" formControlName="autonomy">
+        <mat-label>Average Cost</mat-label>
+        <input matInput class="form-control" formControlName="averageCost">
         <mat-error *ngIf="formControl.hasError('required')">
-          Autonomy is <strong>required</strong>
+          averageCost is <strong>required</strong>
         </mat-error>
       </mat-form-field>   
-  </section>
-
-  <section class="example-section">
+    </section>
+    <section class="example-section">
+      <mat-form-field class="example-full-width">
+        <mat-label>Average Speed</mat-label>
+        <input matInput class="form-control" formControlName="averageSpeed">
+        <mat-error *ngIf="formControl.hasError('required')">
+          Average Speed is <strong>required</strong>
+        </mat-error>
+      </mat-form-field>&nbsp; &nbsp; &nbsp; &nbsp;    
     <mat-form-field class="example-full-width">
-      <mat-label>Cost Per Kilometer</mat-label>
-      <input matInput class="form-control" formControlName="costPerKilometer">
-      <mat-error *ngIf="formControl.hasError('required')">
-        costPerKilometer is <strong>required</strong>
-      </mat-error>
-    </mat-form-field>&nbsp; &nbsp; &nbsp; &nbsp;    
-    <mat-form-field class="example-full-width">
-      <mat-label>Average Cost</mat-label>
-      <input matInput class="form-control" formControlName="averageCost">
-      <mat-error *ngIf="formControl.hasError('required')">
-        averageCost is <strong>required</strong>
-      </mat-error>
-    </mat-form-field>   
-  </section>
-  <section class="example-section">
-    <mat-form-field class="example-full-width">
-      <mat-label>Average Speed</mat-label>
-      <input matInput class="form-control" formControlName="averageSpeed">
-      <mat-error *ngIf="formControl.hasError('required')">
-        Average Speed is <strong>required</strong>
-      </mat-error>
-    </mat-form-field>&nbsp; &nbsp; &nbsp; &nbsp;    
-  <mat-form-field class="example-full-width">
-    <mat-label>Fuel Type</mat-label>
-    <mat-select class="form-control" formControlName="fuel">
-      <mat-option *ngFor="let fuel of fuels" [value]="fuel.value">
-        {{ fuel.viewValue }}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
-  </section>
+      <mat-label>Fuel Type</mat-label>
+      <mat-select class="form-control" formControlName="fuel">
+        <mat-option *ngFor="let fuel of fuels" [value]="fuel.value">
+          {{ fuel.viewValue }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    </section>
   
-
-      <div>
+    <div>
       <a mat-button (click)= "submit()">Submit</a>
     </div>  
+
+    <div *ngIf="hasError">
+      <ul>
+        <div *ngFor="let errorMessage of errorMessages">
+          <mat-error-label>{{errorMessage}}</mat-error-label>
+        </div>
+      </ul>
+    </div>
+
   </div>
-  
-  
 
 </ng-template>
 
