--- a/viajantes2-spa/src/app/RedeMasterData/components/routes/routes.component.css
+++ b/viajantes2-spa/src/app/RedeMasterData/components/routes/routes.component.css
@@ -15,6 +15,7 @@ table {
   mat-label {
     color: blueviolet;
   }
+  
   /* mat-button {
     color: blueviolet;
   } */
@@ -40,6 +41,11 @@ table {
   .example-margin {
     color: blueviolet;
   }
+
+  mat-error-label {
+    color: red;
+  }
+  
   /* .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
     background-color: blueviolet;
   }
