--- a/viajantes2-spa/src/app/RedeMasterData/components/tripulant-type/tripulant-type.component.css
+++ b/viajantes2-spa/src/app/RedeMasterData/components/tripulant-type/tripulant-type.component.css
@@ -37,7 +37,9 @@ table {
   .example-margin {
     color: blueviolet;
   }
-
+  mat-label {
+    color: blueviolet;
+  }
   mat-error-label {
     color: red;
   }
