--- a/viajantes2-spa/src/app/RedeMasterData/components/tripulant-type/tripulant-type.component.html
+++ b/viajantes2-spa/src/app/RedeMasterData/components/tripulant-type/tripulant-type.component.html
@@ -6,7 +6,7 @@
 
 <div *ngIf="!isAdding; else createTripulantTypeTemplate">
 <mat-form-field>
-    <mat-label>Filter</mat-label>
+    <mat-label>Search: </mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Aguiar de Sousa" #input>
   </mat-form-field>
 <table mat-table [dataSource]="dataSource"  class="mat-elevation-z8">
