--- a/viajantes2-spa/src/app/RedeMasterData/components/vehicle-type/vehicle-type.component.html
+++ b/viajantes2-spa/src/app/RedeMasterData/components/vehicle-type/vehicle-type.component.html
@@ -9,7 +9,7 @@
 
 <div *ngIf="!isAdding; else createVehicleTypeTemplate">
   <mat-form-field>
-    <mat-label>Filter</mat-label>
+    <mat-label>Search: </mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Minibus" #input>
   </mat-form-field>
 <table mat-table [dataSource]="dataSource"  class="mat-elevation-z8">
