Remove unused action buttons on tables

--- a/viajantes2-spa/src/app/RedeMasterData/components/line/line.component.html
+++ b/viajantes2-spa/src/app/RedeMasterData/components/line/line.component.html
@@ -42,7 +42,7 @@
         <ng-container matColumnDef="actions">
           <mat-header-cell  *matHeaderCellDef ></mat-header-cell>
           <mat-cell *matCellDef="let row" >
-              <button mat-button (click)= "onShowDetails(row)" ><mat-icon color='blueviolet'>visibility</mat-icon></button><button mat-button ><mat-icon color='blueviolet'>remove_circle</mat-icon></button>
+              <button mat-button (click)= "onShowDetails(row)" ><mat-icon color='blueviolet'>visibility</mat-icon></button>
           </mat-cell>
         </ng-container>
     
