--- a/viajantes2-spa/src/app/RedeMasterData/components/nodes/nodes.component.html
+++ b/viajantes2-spa/src/app/RedeMasterData/components/nodes/nodes.component.html
@@ -48,12 +48,13 @@
         <mat-icon color='blueviolet'>done</mat-icon></i></td>
     </ng-container>
 
-    <ng-container matColumnDef="actions">
-        <mat-header-cell  *matHeaderCellDef ></mat-header-cell>
-        <mat-cell *matCellDef="let row" >
-             <button mat-button (click)= "onShowDetails(row)" ><mat-icon color='blueviolet'>create</mat-icon></button><button mat-button ><mat-icon color='blueviolet'>remove_circle</mat-icon></button>
-        </mat-cell>
-      </ng-container>
+    <!-- <ng-container matColumnDef="actions">
+      <mat-header-cell  *matHeaderCellDef ></mat-header-cell>
+      <mat-cell *matCellDef="let row" >
+            <button mat-button (click)= "onShowDetails(row)" ><mat-icon color='blueviolet'>create</mat-icon></button>
+            <button mat-button ><mat-icon color='blueviolet'>remove_circle</mat-icon></button>
+      </mat-cell>
+    </ng-container> -->
 
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
