--- a/viajantes2-spa/src/app/RedeMasterData/components/tripulant-type/tripulant-type.component.html
+++ b/viajantes2-spa/src/app/RedeMasterData/components/tripulant-type/tripulant-type.component.html
@@ -14,12 +14,13 @@
     <th mat-header-cell *matHeaderCellDef > Description </th>
     <td mat-cell *matCellDef="let tripulantTypes"> {{tripulantTypes.description}} </td>
   </ng-container>
-  <ng-container matColumnDef="actions">
+  <!-- <ng-container matColumnDef="actions">
     <mat-header-cell  *matHeaderCellDef ></mat-header-cell>
     <mat-cell *matCellDef="let row" >
-         <button mat-button><mat-icon color='blueviolet'>create</mat-icon></button><button mat-button ><mat-icon color='blueviolet'>remove_circle</mat-icon></button>
+         <button mat-button><mat-icon color='blueviolet'>create</mat-icon></button>
+         <button mat-button ><mat-icon color='blueviolet'>remove_circle</mat-icon></button>
     </mat-cell>
-  </ng-container>
+  </ng-container> -->
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row  *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
