Add Return button to Add Route to Line

--- a/viajantes2-spa/src/app/RedeMasterData/components/line-route/line-route.component.html
+++ b/viajantes2-spa/src/app/RedeMasterData/components/line-route/line-route.component.html
@@ -51,6 +51,7 @@
 </div>  
 <div>
   <a mat-button (click)= "submit()">Submit</a>
+  <a mat-button (click)= "returnToLinesList()" >Return</a>
 </div>
 <div *ngIf="hasError">
   <ul>
