--- a/viajantes2-spa/src/app/overall-components/side-nav/side-nav.component.css
+++ b/viajantes2-spa/src/app/overall-components/side-nav/side-nav.component.css
@@ -1,19 +1,40 @@
-.sidenav-container {
-  height: 100%;
-}
-
-.sidenav {
-  width: 200px;
-}
-
-.sidenav .mat-toolbar {
-  background: inherit; 
-}
-
-
 .mat-toolbar.mat-primary {
   /* position: sticky; */
   top: 0;
   z-index: 1;
   background-color: blueviolet;
+}
+.container {
+  height: 88%;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+}
+.sidenav-content {
+  height: 100%;
+  justify-content: center;
+}
+.sidenav {
+   user-select: none;
+}
+.mat-nav-list {
+  height: auto;
+}
+.mat-nav-list {
+  width: 100%;
+}
+.menu-button {
+  transition: 300ms ease-in-out;
+  transform: rotate(0deg);
+}
+.menu-button.rotated {
+  transform: rotate(180deg);
+}
+.submenu {
+  overflow-y: hidden;
+  transition: transform 300ms ease;
+  transform: scaleY(0);
+  transform-origin: top;
+  padding-left: 30px;
+}
+.submenu.expanded {
+  transform: scaleY(1);
 }
