--- a/viajantes2-spa/src/app/overall-components/side-nav/side-nav.component.html
+++ b/viajantes2-spa/src/app/overall-components/side-nav/side-nav.component.html
@@ -1,24 +1,54 @@
-<mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
-    <mat-toolbar><mat-icon aria-hidden="false" aria-label="Example home icon">directions_bus</mat-icon>&nbsp; &nbsp;Menu</mat-toolbar>
+<mat-toolbar color="primary" class="toolbar">
+  <button mat-icon-button (click)="updateGlobalExpand()">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <h1 class="app-name">Viajantes 2</h1>
+</mat-toolbar>
+<mat-sidenav-container class="container" autosize>
+  <mat-sidenav #sidenav class="sidenav" mode="side" opened="true" (mouseenter)="mouseenter()" (mouseleave)="mouseleave()">
     <mat-nav-list>
-      <a mat-list-item (click)="goToNodes()"><mat-icon aria-hidden="false" aria-label="Example home icon">pin_drop</mat-icon>&nbsp; &nbsp;Nodes</a>
-      <a mat-list-item (click)="goToRoutes()"><mat-icon aria-hidden="false" aria-label="Example home icon">alt_route</mat-icon>&nbsp; &nbsp;Routes</a>
-      <a mat-list-item (click)="goToLines()"><mat-icon aria-hidden="false" aria-label="Example home icon">add_road</mat-icon>&nbsp; &nbsp;Lines</a>
-      <a mat-list-item (click)="goToTType()"><mat-icon aria-hidden="false" aria-label="Example home icon">emoji_people</mat-icon>&nbsp; &nbsp;Tripulant Type</a>
-      <a mat-list-item (click)="goToVType()"><mat-icon aria-hidden="false" aria-label="Example home icon">directions_bus</mat-icon>&nbsp; &nbsp;Vehicle Type</a>
-      <a mat-list-item (click)="goToTGLX()"><mat-icon aria-hidden="false" aria-label="Example home icon">cloud_upload</mat-icon>&nbsp; &nbsp;Import GLX</a>
-    </mat-nav-list>    
+      <mat-list-item (click)="showRMDSubmenu = !showRMDSubmenu" class="parent">
+        <span class="full-width" *ngIf="isRMDExpanded || isShowing">Network</span>
+        <mat-icon mat-list-icon>map</mat-icon>
+        <mat-icon class="menu-button" [ngClass]="{'rotated' : showRMDSubmenu}" *ngIf="isRMDExpanded || isShowing">expand_more</mat-icon>
+      </mat-list-item>
+      <div class="submenu" [ngClass]="{'expanded' : showRMDSubmenu}" *ngIf="(isShowing || isRMDExpanded) && showRMDSubmenu">
+        <a mat-list-item (click)="goToNodes()"><mat-icon aria-hidden="false" aria-label="Example home icon">pin_drop</mat-icon>&nbsp; &nbsp;Nodes</a>
+        <a mat-list-item (click)="goToRoutes()"><mat-icon aria-hidden="false" aria-label="Example home icon">alt_route</mat-icon>&nbsp; &nbsp;Routes</a>
+        <a mat-list-item (click)="goToLines()"><mat-icon aria-hidden="false" aria-label="Example home icon">add_road</mat-icon>&nbsp; &nbsp;Lines</a>
+        <a mat-list-item (click)="goToTType()"><mat-icon aria-hidden="false" aria-label="Example home icon">emoji_people</mat-icon>&nbsp; &nbsp;Tripulant Type</a>
+        <a mat-list-item (click)="goToVType()"><mat-icon aria-hidden="false" aria-label="Example home icon">directions_bus</mat-icon>&nbsp; &nbsp;Vehicle Type</a>
+      </div>
+    </mat-nav-list>
+    <mat-nav-list>
+      <mat-list-item (click)="showVMDSubmenu = !showVMDSubmenu" class="parent">
+        <span class="full-width" *ngIf="isVMDExpanded || isShowing">Trip</span>
+        <mat-icon mat-list-icon>navigation</mat-icon>
+        <mat-icon class="menu-button" [ngClass]="{'rotated' : showVMDSubmenu}" *ngIf="isVMDExpanded || isShowing">expand_more</mat-icon>
+      </mat-list-item>
+      <div class="submenu" [ngClass]="{'expanded' : showVMDSubmenu}" *ngIf="(isVMDExpanded || isShowing) && showVMDSubmenu">
+        <a mat-list-item (click)="goToVehicles()"><mat-icon aria-hidden="false" aria-label="Example home icon">directions_bus</mat-icon>&nbsp; &nbsp;Vehicles</a>
+      </div>
+    </mat-nav-list>
+    <mat-nav-list>
+      <mat-list-item (click)="goToTGLX()" class="parent">
+        <span class="full-width" *ngIf="isGLXExpanded || isShowing">Import GLX</span>
+        <mat-icon mat-list-icon>cloud_upload</mat-icon>
+      </mat-list-item>
+    </mat-nav-list>
   </mat-sidenav>
-  <mat-sidenav-content>
-    <mat-toolbar color="primary">
-      <span>Viajantes 2</span>
-    </mat-toolbar>
-  <router-outlet></router-outlet>
 
-  </mat-sidenav-content>
- 
+  <div class="sidenav-content">
+    <mat-card>
+      <router-outlet></router-outlet>
+    </mat-card>
+    
+  </div>
+
 </mat-sidenav-container>
+
+
+
+<!-- Copyright 2017 Google Inc. All Rights Reserved.
+    Use of this source code is governed by an MIT-style license that
+    can be found in the LICENSE file at http://angular.io/license -->
