--- a/viajantes2-spa/src/app/ViagemMasterData/components/trips/trips.component.html
+++ b/viajantes2-spa/src/app/ViagemMasterData/components/trips/trips.component.html
@@ -37,6 +37,97 @@
     </table>
 </div>
 
-<ng-template #createTripTemplate>
- 
-</ng-template>
+<div *ngIf="isAdding && !isAddingAdHoc">
+
+    <div [formGroup]="tripForm">
+        
+        <section class="example-section">
+            <mat-form-field class="example-full-width">
+                <mat-label>Line</mat-label>
+                <mat-select class="form-control"  formControlName="line">
+                    <mat-option *ngFor="let line of lineList" [value]="line.id">
+                    {{ line.code }}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>&nbsp; &nbsp; &nbsp; &nbsp; 
+
+            <mat-form-field class="example-full-width">
+                <mat-label>Route</mat-label>
+                <mat-select class="form-control"  formControlName="route">
+                    <mat-option *ngFor="let route of routeList" [value]="route.id">
+                    {{route.routeNodes[0].node.shortName}} - {{route.routeNodes[route.routeNodes.length-1].node.shortName}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>&nbsp; &nbsp; &nbsp; &nbsp; 
+        </section>
+
+        <section class="example-section">
+            <mat-form-field class="example-full-width">
+                <mat-label>Frequency (minutes)</mat-label>
+                <input matInput class="form-control" formControlName="frequency">
+                <mat-error *ngIf="formControl.hasError('required')">
+                    Frequency is <strong>required</strong>
+                </mat-error>
+            </mat-form-field>&nbsp; &nbsp; &nbsp; &nbsp; 
+
+            <mat-form-field class="example-full-width">
+                <mat-label>Number of Trips</mat-label>
+                <input matInput class="form-control" formControlName="numberOfTrips">
+                <mat-error *ngIf="formControl.hasError('required')">
+                    Number of Trips is <strong>required</strong>
+                </mat-error>
+            </mat-form-field> 
+        </section>
+
+    </div>
+    <div>
+        <a mat-button (click)= "submit()">Submit</a>
+    </div>
+    <div *ngIf="hasError">
+        <ul>
+            <div *ngFor="let errorMessage of errorMessages">
+                <mat-error-label>{{errorMessage}}</mat-error-label>
+            </div>
+        </ul>
+    </div>
+
+</div>
+
+<div *ngIf="!isAdding && isAddingAdHoc">
+
+    <div [formGroup]="tripAdHocForm">
+        
+        <section class="example-section">
+            <mat-form-field class="example-full-width">
+                <mat-label>Line</mat-label>
+                <mat-select class="form-control"  formControlName="line">
+                    <mat-option *ngFor="let line of lineList" [value]="line.id">
+                    {{ line.code }}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>&nbsp; &nbsp; &nbsp; &nbsp; 
+
+            <mat-form-field class="example-full-width">
+                <mat-label>Route</mat-label>
+                <mat-select class="form-control"  formControlName="route">
+                    <mat-option *ngFor="let route of routeList" [value]="route.id">
+                    {{route.routeNodes[0].node.shortName}} - {{route.routeNodes[route.routeNodes.length-1].node.shortName}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>&nbsp; &nbsp; &nbsp; &nbsp; 
+
+        </section>
+
+    </div>
+    <div>
+        <a mat-button (click)= "submitAdHoc()">Submit</a>
+    </div>
+    <div *ngIf="hasError">
+        <ul>
+            <div *ngFor="let errorMessage of errorMessages">
+                <mat-error-label>{{errorMessage}}</mat-error-label>
+            </div>
+        </ul>
+    </div>
+
+</div>
