Time picker to insert trips

--- a/viajantes2-spa/src/app/ViagemMasterData/components/trips/trips.component.css
+++ b/viajantes2-spa/src/app/ViagemMasterData/components/trips/trips.component.css
@@ -54,3 +54,11 @@ table {
   .mat-slide-toggle.mat-checked {
     color: blueviolet;
   } */
+
+  .timepicker-overlay {
+    z-index: 10000000 !important;
+  }
+
+  .timepicker-backdrop-overlay {
+    z-index: 10000000 !important;
+  }
