--- a/viajantes2-spa/src/app/ViagemMasterData/components/trips/trips.component.html
+++ b/viajantes2-spa/src/app/ViagemMasterData/components/trips/trips.component.html
@@ -59,6 +59,10 @@
                     </mat-option>
                 </mat-select>
             </mat-form-field>&nbsp; &nbsp; &nbsp; &nbsp; 
+
+            <mat-label>Start Time: </mat-label>
+            <input atp-time-picker formControlName="startTime" />
+
         </section>
 
         <section class="example-section">
@@ -76,25 +80,8 @@
                 <mat-error *ngIf="formControl.hasError('required')">
                     Number of Trips is <strong>required</strong>
                 </mat-error>
-            </mat-form-field> &nbsp; &nbsp; &nbsp; &nbsp; 
-
-            <mat-form-field class="example-full-width">
-                <mat-label>Start Time Hour</mat-label>
-                <mat-select class="form-control"  formControlName="startTimeHour">
-                    <mat-option *ngFor="let hour of hours" [value]="hour">
-                    {{ hour }}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>&nbsp; &nbsp; &nbsp; &nbsp; 
-
-            <mat-form-field class="example-full-width">
-                <mat-label>Start Time Minute</mat-label>
-                <mat-select class="form-control"  formControlName="startTimeMinute">
-                    <mat-option *ngFor="let minute of minutes" [value]="minute">
-                    {{ minute }}
-                    </mat-option>
-                </mat-select>
             </mat-form-field>
+
         </section>
 
     </div>
@@ -134,23 +121,8 @@
                 </mat-select>
             </mat-form-field>&nbsp; &nbsp; &nbsp; &nbsp;
 
-            <mat-form-field class="example-full-width">
-                <mat-label>Start Time Hour</mat-label>
-                <mat-select class="form-control"  formControlName="startTimeHour">
-                    <mat-option *ngFor="let hour of hours" [value]="hour">
-                    {{ hour }}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>&nbsp; &nbsp; &nbsp; &nbsp; 
-
-            <mat-form-field class="example-full-width">
-                <mat-label>Start Time Minute</mat-label>
-                <mat-select class="form-control"  formControlName="startTimeMinute">
-                    <mat-option *ngFor="let minute of minutes" [value]="minute">
-                    {{ minute }}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
+            <mat-label>Start Time: </mat-label>
+            <input atp-time-picker formControlName="startTime" />
 
         </section>
 
